Add the Id to second line

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,4 +1,11 @@
 .red-highlight{
+
     background-color: rgb(236, 152, 152);
     font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#second {
+
+    color: blue;
+    font-size: 36px;
 }
