Fix the class info for line 1, 3, 5

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,7 +1,12 @@
-.red-highlight{
+.odd{
 
     background-color: rgb(236, 152, 152);
     font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+.oddcool{
+
+    font-size: 24px;
 }
 
 #second {
