--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -14,3 +14,10 @@
     color: blue;
     font-size: 36px;
 }
+
+#fourth{
+
+    background-color: rgb(140, 228, 140);
+    font-size: 24px;
+    font-weight: bold;
+}
