Add flexbox to CSS

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 img {
@@ -10,8 +11,26 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+
 }
 
+.plants{
+  display: flex;
+  justify-content: center;
+  gap:52px;
+}
+
+.barberry, .chili, .pepper, .saffron{
+  display: flex;
+  flex-direction: column;
+  
+
+  }
+.text{
+  max-width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
