Add flexbox info to css

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,17 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex:1;
 }
 
 img {
@@ -16,6 +27,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,4 +36,39 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul{
+  list-style-type: none;
+}
+
+li{
+  display: inline;
+  padding-left: 8px;
+  
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+ }
+
+
+
+.link{
+  color: black;
+}
+
+a{
+  text-decoration: none;
+}
+
+.footer{
+  background-color: #eeeeee;
+  margin-top: auto;
+}
+
+.right-links{
+  padding-right: 8px;
 }
